kustom_template/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cicd-test
spec:
  selector:
    matchLabels:
      app: cicd-test
  template:
    metadata:
      labels:
        app: cicd-test
    spec:
      containers:
      - name: cicd-test
        image: ghcr.io/kakaocloudschool/devops-test-web:dev
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "32Mi"          
            cpu: "200m"
        ports:
        - name: web-site
          containerPort: 80                      
---
apiVersion: v1
kind: Service
metadata:
  name: ing-cicd
spec:
  selector:
    app: cicd-test
  ports:
    - name: http
      port: 80
      protocol: TCP
  type: LoadBalancer
